fixed navbar rendering on Safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,5 @@
 @tailwind utilities;
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-  .scale-in-ver-top{-webkit-animation:scale-in-ver-top 1s cubic-bezier(.25,.46,.45,.94) both;animation:scale-in-ver-top .5s cubic-bezier(.25,.46,.45,.94) both}
-  @-webkit-keyframes scale-in-ver-top{0%{-webkit-transform:scaleY(0);transform:scaleY(0);-webkit-transform-origin:100% 0;transform-origin:100% 0;opacity:1}100%{-webkit-transform:scaleY(1);transform:scaleY(1);-webkit-transform-origin:100% 0;transform-origin:100% 0;opacity:1}}@keyframes scale-in-ver-top{0%{-webkit-transform:scaleY(0);transform:scaleY(0);-webkit-transform-origin:100% 0;transform-origin:100% 0;opacity:1}100%{-webkit-transform:scaleY(1);transform:scaleY(1);-webkit-transform-origin:100% 0;transform-origin:100% 0;opacity:1}}
-  .scale-up-ver-top-delay{-webkit-animation:scale-up-ver-top .4s cubic-bezier(.39,.575,.565,1.000) 2s both;animation:scale-up-ver-top .4s cubic-bezier(.39,.575,.565,1.000) 2s both}
-  @-webkit-keyframes scale-up-ver-top{0%{-webkit-transform:scaleY(.4);transform:scaleY(.4);-webkit-transform-origin:100% 0;transform-origin:100% 0}100%{-webkit-transform:scaleY(1);transform:scaleY(1);-webkit-transform-origin:100% 0;transform-origin:100% 0}}@keyframes scale-up-ver-top{0%{-webkit-transform:scaleY(.4);transform:scaleY(.4);-webkit-transform-origin:100% 0;transform-origin:100% 0}100%{-webkit-transform:scaleY(1);transform:scaleY(1);-webkit-transform-origin:100% 0;transform-origin:100% 0}}
 }
 
